[gd_scene load_steps=4 format=3 uid="uid://cvswvndtcipjd"]

[ext_resource type="Script" path="res://wire_box.gd" id="1_tf6at"]
[ext_resource type="Texture2D" uid="uid://m2m6ia77vijc" path="res://art/box.png" id="2_wxwxl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vdmcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wxwxl")
}],
"loop": true,
"name": &"my_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wxwxl")
}],
"loop": true,
"name": &"others_box",
"speed": 5.0
}]

[node name="WireBox" type="Node2D"]
position = Vector2(294, 630)
script = ExtResource("1_tf6at")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_vdmcb")
animation = &"my_box"

[node name="Wires" type="Node2D" parent="."]

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -77.0
offset_top = -176.0
offset_right = 2.0
offset_bottom = -145.0
text = "set wire"

[node name="Button2" type="Button" parent="."]
visible = false
offset_right = 8.0
offset_bottom = 8.0
text = "update wire"

[node name="ExitButton" type="Button" parent="."]
offset_left = -20.0
offset_top = 68.0
offset_right = 17.0
offset_bottom = 99.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
